--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@ant-design/react-native": "^4.2.0",
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "antd": "^4.18.4",
     "camelize": "^1.0.0",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
